Align sections within body. Fix image proportions. Remove 'Maaaah'. Begin section-two content.

--- a/style.css
+++ b/style.css
@@ -1,8 +1,17 @@
 body {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     background-color: black;
     font-family: Arial, sans-serif;
+}
+
+.section-one,
+.section-two,
+.section-three,
+.section-four {
+    max-width: 660px;
 }
 
 .section-one {
@@ -12,11 +21,19 @@ body {
     color: white;
     padding-inline: 128px;
     padding-bottom: 96px;
+    gap: 40px;
 }
 
 .header-one {
     display: flex;
     justify-content: space-between;
+    margin-top: 24px;
+}
+
+.header-one img {
+    width: 72px;
+    height: 72px;
+    border-radius: 36px;
 }
 
 .header-one ul {
@@ -32,19 +49,22 @@ body {
 .content-one {
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 32px;
 }
 
 .content-one-left {
     flex: 1;
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    align-items: stretch;
+    align-items: stretch; */
 }
 
 .content-one img {
     flex: 1;
-    width: 20px;
+    flex-shrink:0;
+    min-width: 90px;
+    height: 100%;
     border-radius: 15px;
     border: 2px solid #3882F6;
 }
@@ -54,7 +74,17 @@ button {
     font-weight: bold;
     color: rgb(250,250,250);
     background-color: #3882F6;
-    width: 96px;
     height: 28px;
     border-radius: 9px;
+}
+
+.section-two {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+}
+
+.section-two img {
+    height: 40px;
+    width: auto;
 }
